fix(dashboard): assign z-index to scroll-up element

--- a/src/components/pages/dashboard/dashboard.scss
+++ b/src/components/pages/dashboard/dashboard.scss
@@ -12,6 +12,7 @@
     right: 1rem;
     bottom: 1rem;
     display: none;
+    z-index: 100;
   }
 }
 
